--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ gson = "2.11.0"
 hilt = "2.52"
 hilt-compiler = "1.2.0"
 hilt-ext = "1.2.0"
+itext = "7.2.5"
 junit = "4.13.2"
 junit-ext = "1.2.1"
 kotlin = "2.0.21"
@@ -75,6 +76,10 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-ext" }
 hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hilt-ext" }
+
+# iText
+itext-core = { group = "com.itextpdf", name = "itext7-core", version.ref = "itext" }
+
 
 #Kotlinx
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json-version" }
